--- a/script.ipynb
+++ b/script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "eacc36d3",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2328ba26",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "1dcf6310",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "c67562e4",
    "metadata": {},
    "outputs": [],
@@ -92,255 +92,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "495760e6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['(Accolite)[list/accolite.md]',\n",
-       "  '(Adobe)[list/adobe.md]',\n",
-       "  '(Aetion)[list/aetion.md]',\n",
-       "  '(Affinity)[list/affinity.md]'],\n",
-       " ['(Affirm)[list/affirm.md]',\n",
-       "  '(Airbnb)[list/airbnb.md]',\n",
-       "  '(Airtel)[list/airtel.md]',\n",
-       "  '(Akamai)[list/akamai.md]'],\n",
-       " ['(Akuna Capital)[list/akuna-capital.md]',\n",
-       "  '(Akuna)[list/akuna.md]',\n",
-       "  '(Alation)[list/alation.md]',\n",
-       "  '(Alibaba)[list/alibaba.md]'],\n",
-       " ['(Amazon)[list/amazon.md]',\n",
-       "  '(American Express)[list/american-express.md]',\n",
-       "  '(Appdynamics)[list/appdynamics.md]',\n",
-       "  '(Apple)[list/apple.md]'],\n",
-       " ['(Arista Networks)[list/arista-networks.md]',\n",
-       "  '(Arista)[list/arista.md]',\n",
-       "  '(Asana)[list/asana.md]',\n",
-       "  '(Atlassian)[list/atlassian.md]'],\n",
-       " ['(Audible)[list/audible.md]',\n",
-       "  '(Baidu)[list/baidu.md]',\n",
-       "  '(Barclays)[list/barclays.md]',\n",
-       "  '(Blackrock)[list/blackrock.md]'],\n",
-       " ['(Blizzard)[list/blizzard.md]',\n",
-       "  '(Bloomberg)[list/bloomberg.md]',\n",
-       "  '(Bloomreach)[list/bloomreach.md]',\n",
-       "  '(Booking)[list/booking.md]'],\n",
-       " ['(Bookingcom)[list/bookingcom.md]',\n",
-       "  '(Box)[list/box.md]',\n",
-       "  '(Bytedance)[list/bytedance.md]',\n",
-       "  '(Bytedancetoutiao)[list/bytedancetoutiao.md]'],\n",
-       " ['(C3 Iot)[list/c3-iot.md]',\n",
-       "  '(C3Ai)[list/c3ai.md]',\n",
-       "  '(Capital One)[list/capital-one.md]',\n",
-       "  '(Cisco)[list/cisco.md]'],\n",
-       " ['(Citadel)[list/citadel.md]',\n",
-       "  '(Citrix)[list/citrix.md]',\n",
-       "  '(Cloudera)[list/cloudera.md]',\n",
-       "  '(Clutter)[list/clutter.md]'],\n",
-       " ['(Codenation)[list/codenation.md]',\n",
-       "  '(Cohesity)[list/cohesity.md]',\n",
-       "  '(Coupang)[list/coupang.md]',\n",
-       "  '(Coursera)[list/coursera.md]'],\n",
-       " ['(Cruise Automation)[list/cruise-automation.md]',\n",
-       "  '(Databricks)[list/databricks.md]',\n",
-       "  '(Dataminr)[list/dataminr.md]',\n",
-       "  '(De Shaw)[list/de-shaw.md]'],\n",
-       " ['(Deliveryhero)[list/deliveryhero.md]',\n",
-       "  '(Dell)[list/dell.md]',\n",
-       "  '(Deutsche Bank)[list/deutsche-bank.md]',\n",
-       "  '(Didi)[list/didi.md]'],\n",
-       " ['(Docusign)[list/docusign.md]',\n",
-       "  '(Doordash)[list/doordash.md]',\n",
-       "  '(Drawbridge)[list/drawbridge.md]',\n",
-       "  '(Dropbox)[list/dropbox.md]'],\n",
-       " ['(Druva)[list/druva.md]',\n",
-       "  '(Ebay)[list/ebay.md]',\n",
-       "  '(Electronic Arts)[list/electronic-arts.md]',\n",
-       "  '(Emc)[list/emc.md]'],\n",
-       " ['(Epic Systems)[list/epic-systems.md]',\n",
-       "  '(Evernote)[list/evernote.md]',\n",
-       "  '(Expedia)[list/expedia.md]',\n",
-       "  '(F5 Networks)[list/f5-networks.md]'],\n",
-       " ['(Facebook)[list/facebook.md]',\n",
-       "  '(Factset)[list/factset.md]',\n",
-       "  '(Fallible)[list/fallible.md]',\n",
-       "  '(Fidessa)[list/fidessa.md]'],\n",
-       " ['(Flexport)[list/flexport.md]',\n",
-       "  '(Flipkart)[list/flipkart.md]',\n",
-       "  '(Forusall)[list/forusall.md]',\n",
-       "  '(Garena)[list/garena.md]'],\n",
-       " ['(Ge Digital)[list/ge-digital.md]',\n",
-       "  '(Gilt Groupe)[list/gilt-groupe.md]',\n",
-       "  '(Godaddy)[list/godaddy.md]',\n",
-       "  '(Goldman Sachs)[list/goldman-sachs.md]'],\n",
-       " ['(Google)[list/google.md]',\n",
-       "  '(Grab)[list/grab.md]',\n",
-       "  '(Groupon)[list/groupon.md]',\n",
-       "  '(Gsn Games)[list/gsn-games.md]'],\n",
-       " ['(Hbo)[list/hbo.md]',\n",
-       "  '(Helix)[list/helix.md]',\n",
-       "  '(Honey)[list/honey.md]',\n",
-       "  '(Hotstar)[list/hotstar.md]'],\n",
-       " ['(Houzz)[list/houzz.md]',\n",
-       "  '(Hrt)[list/hrt.md]',\n",
-       "  '(Huawei)[list/huawei.md]',\n",
-       "  '(Hulu)[list/hulu.md]'],\n",
-       " ['(Ibm)[list/ibm.md]',\n",
-       "  '(Iit Bombay)[list/iit-bombay.md]',\n",
-       "  '(Indeed)[list/indeed.md]',\n",
-       "  '(Infosys)[list/infosys.md]'],\n",
-       " ['(Inmobi)[list/inmobi.md]',\n",
-       "  '(Intel)[list/intel.md]',\n",
-       "  '(Intuit)[list/intuit.md]',\n",
-       "  '(Ixl)[list/ixl.md]'],\n",
-       " ['(Jane Street)[list/jane-street.md]',\n",
-       "  '(Jingchi)[list/jingchi.md]',\n",
-       "  '(Jp Morgan Chase)[list/jp-morgan-chase.md]',\n",
-       "  '(Jpmorgan)[list/jpmorgan.md]'],\n",
-       " ['(Jump Trading)[list/jump-trading.md]',\n",
-       "  '(Kakao)[list/kakao.md]',\n",
-       "  '(Karat)[list/karat.md]',\n",
-       "  '(Leap Motion)[list/leap-motion.md]'],\n",
-       " ['(Limebike)[list/limebike.md]',\n",
-       "  '(Linkedin)[list/linkedin.md]',\n",
-       "  '(Liveramp)[list/liveramp.md]',\n",
-       "  '(Lyft)[list/lyft.md]'],\n",
-       " ['(Machine Zone)[list/machine-zone.md]',\n",
-       "  '(Machinezone)[list/machinezone.md]',\n",
-       "  '(Maq Software)[list/maq-software.md]',\n",
-       "  '(Mathworks)[list/mathworks.md]'],\n",
-       " ['(Mckinsey)[list/mckinsey.md]',\n",
-       "  '(Medianet)[list/medianet.md]',\n",
-       "  '(Meituan)[list/meituan.md]',\n",
-       "  '(Microsoft)[list/microsoft.md]'],\n",
-       " ['(Microstrategy)[list/microstrategy.md]',\n",
-       "  '(Morgan Stanley)[list/morgan-stanley.md]',\n",
-       "  '(National Instruments)[list/national-instruments.md]',\n",
-       "  '(Netease)[list/netease.md]'],\n",
-       " ['(Netflix)[list/netflix.md]',\n",
-       "  '(Netsuite)[list/netsuite.md]',\n",
-       "  '(Nutanix)[list/nutanix.md]',\n",
-       "  '(Nvidia)[list/nvidia.md]'],\n",
-       " ['(Opendoor)[list/opendoor.md]',\n",
-       "  '(Oracle)[list/oracle.md]',\n",
-       "  '(Palantir Technologies)[list/palantir-technologies.md]',\n",
-       "  '(Palantir)[list/palantir.md]'],\n",
-       " ['(Paypal)[list/paypal.md]',\n",
-       "  '(Paytm)[list/paytm.md]',\n",
-       "  '(Phonepe)[list/phonepe.md]',\n",
-       "  '(Pinterest)[list/pinterest.md]'],\n",
-       " ['(Pocket Gems)[list/pocket-gems.md]',\n",
-       "  '(Point72)[list/point72.md]',\n",
-       "  '(Ponyai)[list/ponyai.md]',\n",
-       "  '(Poshmark)[list/poshmark.md]'],\n",
-       " ['(Postmates)[list/postmates.md]',\n",
-       "  '(Poynt)[list/poynt.md]',\n",
-       "  '(Pramp)[list/pramp.md]',\n",
-       "  '(Pure Storage)[list/pure-storage.md]'],\n",
-       " ['(Qualcomm)[list/qualcomm.md]',\n",
-       "  '(Qualtrics)[list/qualtrics.md]',\n",
-       "  '(Quantcast)[list/quantcast.md]',\n",
-       "  '(Quip)[list/quip.md]'],\n",
-       " ['(Quora)[list/quora.md]',\n",
-       "  '(Rackspace)[list/rackspace.md]',\n",
-       "  '(Radius)[list/radius.md]',\n",
-       "  '(Reddit)[list/reddit.md]'],\n",
-       " ['(Redfin)[list/redfin.md]',\n",
-       "  '(Riot Games)[list/riot-games.md]',\n",
-       "  '(Robinhood)[list/robinhood.md]',\n",
-       "  '(Roblox)[list/roblox.md]'],\n",
-       " ['(Rubrik)[list/rubrik.md]',\n",
-       "  '(Salesforce)[list/salesforce.md]',\n",
-       "  '(Samsung)[list/samsung.md]',\n",
-       "  '(Sap)[list/sap.md]'],\n",
-       " ['(Sapient)[list/sapient.md]',\n",
-       "  '(Servicenow)[list/servicenow.md]',\n",
-       "  '(Snapchat)[list/snapchat.md]',\n",
-       "  '(Snapdeal)[list/snapdeal.md]'],\n",
-       " ['(Splunk)[list/splunk.md]',\n",
-       "  '(Spotify)[list/spotify.md]',\n",
-       "  '(Square)[list/square.md]',\n",
-       "  '(Sumologic)[list/sumologic.md]'],\n",
-       " ['(Symantec)[list/symantec.md]',\n",
-       "  '(Tableau)[list/tableau.md]',\n",
-       "  '(Tandemg)[list/tandemg.md]',\n",
-       "  '(Tencent)[list/tencent.md]'],\n",
-       " ['(Tesla)[list/tesla.md]',\n",
-       "  '(Thumbtack)[list/thumbtack.md]',\n",
-       "  '(Traveloka)[list/traveloka.md]',\n",
-       "  '(Tripadvisor)[list/tripadvisor.md]'],\n",
-       " ['(Triplebyte)[list/triplebyte.md]',\n",
-       "  '(Turvo)[list/turvo.md]',\n",
-       "  '(Twilio)[list/twilio.md]',\n",
-       "  '(Twitch)[list/twitch.md]'],\n",
-       " ['(Twitter)[list/twitter.md]',\n",
-       "  '(Two Sigma)[list/two-sigma.md]',\n",
-       "  '(Uber)[list/uber.md]',\n",
-       "  '(Uipath)[list/uipath.md]'],\n",
-       " ['(United Health Group)[list/united-health-group.md]',\n",
-       "  '(Valve)[list/valve.md]',\n",
-       "  '(Virtu)[list/virtu.md]',\n",
-       "  '(Visa)[list/visa.md]'],\n",
-       " ['(Vmware)[list/vmware.md]',\n",
-       "  '(Walmart)[list/walmart.md]',\n",
-       "  '(Wayfair)[list/wayfair.md]',\n",
-       "  '(Wish)[list/wish.md]'],\n",
-       " ['(Works Applications)[list/works-applications.md]',\n",
-       "  '(Yahoo)[list/yahoo.md]',\n",
-       "  '(Yandex)[list/yandex.md]',\n",
-       "  '(Yatra)[list/yatra.md]'],\n",
-       " ['(Yelp)[list/yelp.md]',\n",
-       "  '(Zalando)[list/zalando.md]',\n",
-       "  '(Zappos)[list/zappos.md]',\n",
-       "  '(Zenefits)[list/zenefits.md]'],\n",
-       " ['(Zillow)[list/zillow.md]',\n",
-       "  '(Zoho)[list/zoho.md]',\n",
-       "  '(Zscaler)[list/zscaler.md]',\n",
-       "  '(Zulily)[list/zulily.md]']]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "content = ['(' + company.replace('-', ' ').title().strip() + ')[list/' + company + '.md]'\n",
+    "content = ['[' + company.replace('-', ' ').title().strip() + '](./list/' + company + '.md)'\n",
     "                   for company in companies]\n",
     "    \n",
-    "len(content)\n",
     "content.sort()\n",
     "matrix = []\n",
     "while content != []:\n",
-    "    matrix.append(content[:4])\n",
-    "    content = content[4:]\n",
+    "    matrix.append(content[:3])\n",
+    "    content = content[3:]\n",
     "    \n",
-    "matrix\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "b686286c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from tabulate import tabulate\n",
     "\n",
-    "with open('index.md', 'w') as fp:\n",
-    "    fp.write(tabulate(matrix, tablefmt=\"github\" ))"
+    "with open('index.md', 'x') as fp:\n",
+    "    fp.write(tabulate(matrix, headers=[\"\", \"\", \"\", \"\"], tablefmt=\"github\" )) \n",
+    "    \n",
+    "with open('README.md', 'a') as fp:\n",
+    "    fp.write(tabulate(matrix, headers=[\"\", \"\", \"\", \"\"], tablefmt=\"github\" ))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50b39ef9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
